--- a/src/page/common/header/index.css
+++ b/src/page/common/header/index.css
@@ -2,5 +2,8 @@
 * @Author: shijie
 * @Date:   2019-01-22 16:08:28
 * @Last Modified by:   shijie
-* @Last Modified time: 2019-01-22 16:08:28
+* @Last Modified time: 2019-01-22 21:16:03
 */
+#search{
+	background: red;
+}
