--- a/src/view/layout/header.html
+++ b/src/view/layout/header.html
@@ -1,5 +1,5 @@
-<div>
-	<p>LuckyShop</p>
+<div id="search-content">
+	<a href="./index.html" class="logo">LuckyShop</a>
 	<input type="text" placeholder="请输入搜索商品名称" >
 	<button id="searchId">搜索</button>
 </div>
