--- a/src/page/common/layout.css
+++ b/src/page/common/layout.css
@@ -2,5 +2,8 @@
 * @Author: shijie
 * @Date:   2019-01-22 16:27:12
 * @Last Modified by:   shijie
-* @Last Modified time: 2019-01-22 16:27:12
+* @Last Modified time: 2019-01-22 17:56:12
 */
+*{
+	background: black;
+}
