--- a/src/page/index/index.css
+++ b/src/page/index/index.css
@@ -2,8 +2,8 @@
 * @Author: shijie
 * @Date:   2019-01-20 18:53:37
 * @Last Modified by:   shijie
-* @Last Modified time: 2019-01-21 21:10:53
+* @Last Modified time: 2019-01-22 21:15:24
 */
 body{
-	background: red;
+	background: blue;
 }
