--- a/src/view/layout/header.html
+++ b/src/view/layout/header.html
@@ -1,5 +1,9 @@
-<div id="search-content">
-	<a href="./index.html" class="logo">LuckyShop</a>
-	<input type="text" placeholder="请输入搜索商品名称" >
-	<button id="searchId">搜索</button>
+<div class="header">
+	<div class="w">
+		<a class="logo" href="./index.html">LuckyShop</a>
+		<div class="search-con">
+			<input class="search-input" id="search-input" placeholder="请输入商品名称" />
+			<button class="btn serach-btn" id="serach-btn">搜索</button>
+		</div>
+	</div>
 </div>
