--- a/src/view/index.html
+++ b/src/view/index.html
@@ -3,6 +3,107 @@
 	<%= require("html-loader!./layout/head-common.html") %>
 	<title><%= htmlWebpackPlugin.options.title%></title>
 <body>
+	<%= require("html-loader!./layout/nav.html") %>
 	<%= require("html-loader!./layout/header.html") %>
+	<div class="w">
+		<!-- 关键词列表 -->
+		<ul class="keywords-list">
+			<li class="keywords-item">
+				<a href="./list.html?keyword=手机" class="link" target="_blank">手机</a>
+				<a href="./list.html?keyword=数码" class="link" target="_blank">数码</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=电脑" class="link" target="_blank">电脑</a>
+				<a href="./list.html?keyword=办公配件" class="link" target="_blank">办公配件</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=电视" class="link" target="_blank">电视</a>
+				<a href="./list.html?keyword=空调" class="link" target="_blank">空调</a>
+				<a href="./list.html?keyword=冰箱" class="link" target="_blank">冰箱</a>
+				<a href="./list.html?keyword=洗衣机" class="link" target="_blank">洗衣机</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=厨卫家电" class="link" target="_blank">厨卫家电</a>
+				<a href="./list.html?keyword=小家电" class="link" target="_blank">小家电</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=家具" class="link" target="_blank">家具</a>
+				<a href="./list.html?keyword=家装" class="link" target="_blank">家装</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=个护化妆" class="link" target="_blank">个护化妆</a>
+				<a href="./list.html?keyword=清洁用品" class="link" target="_blank">清洁用品</a>
+				<a href="./list.html?keyword=纸品" class="link" target="_blank">纸品</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=母婴用品" class="link" target="_blank">母婴用品</a>
+				<a href="./list.html?keyword=儿童玩具" class="link" target="_blank">儿童玩具</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=童装童鞋" class="link" target="_blank">童装童鞋</a>
+				<a href="./list.html?keyword=男装" class="link" target="_blank">男装</a>
+				<a href="./list.html?keyword=女装" class="link" target="_blank">女装</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=鞋靴" class="link" target="_blank">鞋靴</a>
+				<a href="./list.html?keyword=箱包" class="link" target="_blank">箱包</a>
+				<a href="./list.html?keyword=钟表" class="link" target="_blank">钟表</a>
+				<a href="./list.html?keyword=珠宝" class="link" target="_blank">珠宝</a>
+			</li>
+			<li class="keywords-item">
+				<a href="./list.html?keyword=家具" class="link" target="_blank">家具</a>
+				<a href="./list.html?keyword=家装" class="link" target="_blank">家装</a>
+			</li>
+			<li class="keywords-item">
+                <a class="link" target="_blank" href="./list.html?keyword=图书">图书</a>
+                <a class="link" target="_blank" href="./list.html?keyword=音像">音像</a>
+                <a class="link" target="_blank" href="./list.html?keyword=电子书">电子书</a>
+            </li>
+		</ul>
+	</div>
+	<!-- 无限轮播图 -->
+	<div class="banner-con">
+		<%= require("html-loader!./layout/banner.html") %>
+	</div>
+	<!-- 无限轮播图下面 -->
+	<div class="w">
+		<div class="floor-wrap">
+			<h1 class="floor-title">F1 家用电器</h1>
+			<ul class="floor-list">
+				<li class="floor-item">
+					<a href="./list.html?categoryId=100006">
+						<span class="floor-text">双开门冰箱</span>
+						<img src="<%= require("../image/floor/floor1-1.jpg") %>" alt="双开门冰箱" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./list.html?categoryId=100007">
+						<span class="floor-text">电视</span>
+						<img src="<%= require("../image/floor/floor1-2.jpg") %>" alt="电视" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./list.html?categoryId=100008">
+						<span class="floor-text">洗衣机</span>
+						<img src="<%= require("../image/floor/floor1-3.jpg") %>" alt="洗衣机" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./list.html?categoryId=100009">
+						<span class="floor-text">空调</span>
+						<img src="<%= require("../image/floor/floor1-4.jpg") %>" alt="空调" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./list.html?categoryId=100010">
+						<span class="floor-text">热水器</span>
+						<img src="<%= require("../image/floor/floor1-5.jpg") %>" alt="热水器" class="floor-img">
+					</a>
+				</li>
+
+			</ul>
+		</div>
+	</div>
+	<%= require("html-loader!./layout/footer.html") %>
 </body>
 </html>
