头部导航样式

--- a/src/page/common/header/index.css
+++ b/src/page/common/header/index.css
@@ -2,8 +2,44 @@
 * @Author: shijie
 * @Date:   2019-01-22 16:08:28
 * @Last Modified by:   shijie
-* @Last Modified time: 2019-01-22 21:16:03
+* @Last Modified time: 2019-02-17 19:56:06
 */
-#search{
-	background: red;
+
+
+/*通用头部导航*/
+
+
+/*logo样式*/
+.header .w .logo{
+	position: absolute;
+	left: 40px;
+	top: 34px;
+	display: block;
+	font-size: 36px;
+	color: #c60023;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+/*搜索容器的样式*/
+.header .w .search-con{
+	padding: 40px 0 30px 300px;
+}
+/*搜索框样式*/
+.header .w .search-con .search-input{
+	width: 550px;
+	height: 40px;
+	line-height: 40px;
+	padding-left: 10px;
+	font-size: 15px;
+	border: 2px solid #c60023;
+	outline: none;
+}
+/*搜索按钮样式*/
+.header .w .search-con .btn{
+	position: absolute;
+	height: 46px;
+	width: 80px;
+	background: #c60023;
+	border: 2px solid #c60023;
 }
