--- a/src/page/common/layout.css
+++ b/src/page/common/layout.css
@@ -2,8 +2,119 @@
 * @Author: shijie
 * @Date:   2019-01-22 16:27:12
 * @Last Modified by:   shijie
-* @Last Modified time: 2019-01-22 17:56:12
+* @Last Modified time: 2019-02-17 22:44:11
 */
+
+/*通用样式模块*/
+
 *{
-	background: black;
+	margin: 0;
+	padding:0;
+}
+body{
+	background: #f6f6f6;
+	/*字体*/
+	font:12px/1.5 tahome ,arial,Microsoft YaHei,sans-serif;
+}
+/*去掉链接下面的下划线*/
+.link{
+	text-decoration: none;
+}
+/*去掉li标签默认圆点*/
+li{
+	list-style: none;
+}
+/*图片以块级元素显示*/
+img{
+	display: block;
+}
+
+label{
+	cursor: pointer;
+}
+/*认证框样式*/
+input[type="checkbox"]{
+	cursor: pointer;
+}
+
+
+/*定宽布局*/
+.w{
+	width: 1080px;
+	margin: 0 auto;
+	position: relative;
+	overflow: hidden;
+}
+
+.panel{
+	padding: 10px;
+	margin-bottom: 10px;
+	background: #fff;
+}
+
+.panel .panel-title{
+	padding:10px;
+	font-size: 14px;
+	color: #666;
+	font-weight: bold;
+	border-bottom: 1px solid #eee;
+}
+.panel .panel-body{
+	padding: 10px;
+	overflow: hidden;
+}
+
+/*定义全局通用样式*/
+
+/*隐藏类*/
+.hide{
+	display: none;
+}
+/*超链接样式*/
+.link{
+	color: #999;
+	cursor: pointer;
+	text-decoration: none;
+}
+.link:hover{
+	color: #e80012;
+}
+.link-text{
+	color:#999;
+	text-decoration: none;
+}
+
+
+/*按钮的通用样式*/
+.btn{
+	display: inline-block;
+	padding: 0 20px;
+	height: 40px;
+	line-height: 40px;
+	vertical-align: middle;
+	border: none;
+	background: #c60023;
+	font-size: 17px;
+	font-weight: bold;
+	color: #fff;
+	outline: none;
+	cursor: pointer;
+	text-decoration: none;
+}
+.btn-mini{
+	height: 25px;
+	line-height: 25px;
+	font-size: 12px;
+	padding: 0 10px;
+}
+/*loading*/
+.loading{
+	margin: 10px auto;
+	display: block;
+	width: 65px;
+	height: 65px;
+	border: 1px solid #ddd;
+	border-radius: 5px;
+	background: url(../../image/icon/loading.gif) no-repeat;
+	opacity: .6;/*透明度*/
 }
