--- a/src/view/layout/head-common.html
+++ b/src/view/layout/head-common.html
@@ -4,4 +4,5 @@
 <meta name="description" content="LuckyShop电商平台">
 <link rel="dns-prefetch" href="//s.dongcewei.com/">
 <link rel="dns-prefetch" href="//img.dongcewei.com/">
-
+<!-- font-awesome 字体文件 -->
+<link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
