--- a/src/page/common/banner/index.css
+++ b/src/page/common/banner/index.css
@@ -2,7 +2,7 @@
 * @Author: shijie
 * @Date:   2019-02-17 22:55:44
 * @Last Modified by:   shijie
-* @Last Modified time: 2019-02-18 15:25:03
+* @Last Modified time: 2019-02-18 18:53:51
 */
 *{
 	margin: 0;
@@ -63,7 +63,7 @@
 	z-index: 2;
 	width: 20px;
 	height: 50px;
-	background: rgb(0,0,0,.3);
+	background: rgba(0,0,0,.3);
 	top: 50%;
 	transform: translateY(-50%) rotateY(180deg);
 }
@@ -77,7 +77,7 @@
 	height: 50px;
 	top: 50%;
 	right: 0;
-	background: rgb(0,0,0,.3);
+	background: rgba(0,0,0,.3);
 	transform: translateY(-50%);
 }
 #pre:hover{
