--- a/src/view/layout/banner.html
+++ b/src/view/layout/banner.html
@@ -12,11 +12,11 @@
 	<!-- 5个圆点 -->
 	<div class="button">
 		<!-- 默认处于第一个圆点 -->
-		<span index="0" class="on"></span>
-		<span index='1'></span>
-		<span index='2'></span>
-		<span index='3'></span>
-		<span index='4'></span>
+		<span id="dot" index="0" class="on"></span>
+		<span id="dot" index='1'></span>
+		<span id="dot" index='2'></span>
+		<span id="dot" index='3'></span>
+		<span id="dot" index='4'></span>
 	</div>
 	<!-- 前后按钮 -->
 	<img src="../../image/banner/arrow.png" class="arrow" id="pre"> <!-- 向前按钮 -->
