--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<%= require("html-loader!./layout/head-common.html") %>
-	<title><%= htmlWebpackPlugin.options.title%></title>
+	<title><%= htmlWebpackPlugin.options.title%> -- LuckyShop</title>
 <body>
 	<%= require("html-loader!./layout/nav.html") %>
 	<%= require("html-loader!./layout/header.html") %>
@@ -9,55 +9,55 @@
 		<!-- 关键词列表 -->
 		<ul class="keywords-list">
 			<li class="keywords-item">
-				<a href="./list.html?keyword=手机" class="link" target="_blank">手机</a>
-				<a href="./list.html?keyword=数码" class="link" target="_blank">数码</a>
+				<a href="./product-list.html?keyword=手机" class="link" target="_blank">手机</a>
+				<a href="./product-list.html?keyword=数码" class="link" target="_blank">数码</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=电脑" class="link" target="_blank">电脑</a>
-				<a href="./list.html?keyword=办公配件" class="link" target="_blank">办公配件</a>
+				<a href="./product-list.html?keyword=电脑" class="link" target="_blank">电脑</a>
+				<a href="./product-list.html?keyword=办公配件" class="link" target="_blank">办公配件</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=电视" class="link" target="_blank">电视</a>
-				<a href="./list.html?keyword=空调" class="link" target="_blank">空调</a>
-				<a href="./list.html?keyword=冰箱" class="link" target="_blank">冰箱</a>
-				<a href="./list.html?keyword=洗衣机" class="link" target="_blank">洗衣机</a>
+				<a href="./product-list.html?keyword=电视" class="link" target="_blank">电视</a>
+				<a href="./product-list.html?keyword=空调" class="link" target="_blank">空调</a>
+				<a href="./product-list.html?keyword=冰箱" class="link" target="_blank">冰箱</a>
+				<a href="./product-list.html?keyword=洗衣机" class="link" target="_blank">洗衣机</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=厨卫家电" class="link" target="_blank">厨卫家电</a>
-				<a href="./list.html?keyword=小家电" class="link" target="_blank">小家电</a>
+				<a href="./product-list.html?keyword=厨卫家电" class="link" target="_blank">厨卫家电</a>
+				<a href="./product-list.html?keyword=小家电" class="link" target="_blank">小家电</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=家具" class="link" target="_blank">家具</a>
-				<a href="./list.html?keyword=家装" class="link" target="_blank">家装</a>
+				<a href="./product-list.html?keyword=家具" class="link" target="_blank">家具</a>
+				<a href="./product-list.html?keyword=家装" class="link" target="_blank">家装</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=个护化妆" class="link" target="_blank">个护化妆</a>
-				<a href="./list.html?keyword=清洁用品" class="link" target="_blank">清洁用品</a>
-				<a href="./list.html?keyword=纸品" class="link" target="_blank">纸品</a>
+				<a href="./product-list.html?keyword=个护化妆" class="link" target="_blank">个护化妆</a>
+				<a href="./product-list.html?keyword=清洁用品" class="link" target="_blank">清洁用品</a>
+				<a href="./product-list.html?keyword=纸品" class="link" target="_blank">纸品</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=母婴用品" class="link" target="_blank">母婴用品</a>
-				<a href="./list.html?keyword=儿童玩具" class="link" target="_blank">儿童玩具</a>
+				<a href="./product-list.html?keyword=母婴用品" class="link" target="_blank">母婴用品</a>
+				<a href="./product-list.html?keyword=儿童玩具" class="link" target="_blank">儿童玩具</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=童装童鞋" class="link" target="_blank">童装童鞋</a>
-				<a href="./list.html?keyword=男装" class="link" target="_blank">男装</a>
-				<a href="./list.html?keyword=女装" class="link" target="_blank">女装</a>
+				<a href="./product-list.html?keyword=童装童鞋" class="link" target="_blank">童装童鞋</a>
+				<a href="./product-list.html?keyword=男装" class="link" target="_blank">男装</a>
+				<a href="./product-list.html?keyword=女装" class="link" target="_blank">女装</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=鞋靴" class="link" target="_blank">鞋靴</a>
-				<a href="./list.html?keyword=箱包" class="link" target="_blank">箱包</a>
-				<a href="./list.html?keyword=钟表" class="link" target="_blank">钟表</a>
-				<a href="./list.html?keyword=珠宝" class="link" target="_blank">珠宝</a>
+				<a href="./product-list.html?keyword=鞋靴" class="link" target="_blank">鞋靴</a>
+				<a href="./product-list.html?keyword=箱包" class="link" target="_blank">箱包</a>
+				<a href="./product-list.html?keyword=钟表" class="link" target="_blank">钟表</a>
+				<a href="./product-list.html?keyword=珠宝" class="link" target="_blank">珠宝</a>
 			</li>
 			<li class="keywords-item">
-				<a href="./list.html?keyword=家具" class="link" target="_blank">家具</a>
-				<a href="./list.html?keyword=家装" class="link" target="_blank">家装</a>
+				<a href="./product-list.html?keyword=家具" class="link" target="_blank">家具</a>
+				<a href="./product-list.html?keyword=家装" class="link" target="_blank">家装</a>
 			</li>
 			<li class="keywords-item">
-                <a class="link" target="_blank" href="./list.html?keyword=图书">图书</a>
-                <a class="link" target="_blank" href="./list.html?keyword=音像">音像</a>
-                <a class="link" target="_blank" href="./list.html?keyword=电子书">电子书</a>
+                <a class="link" target="_blank" href="./product-list.html?keyword=图书">图书</a>
+                <a class="link" target="_blank" href="./product-list.html?keyword=音像">音像</a>
+                <a class="link" target="_blank" href="./product-list.html?keyword=电子书">电子书</a>
             </li>
 		</ul>
 		<!-- 无限轮播图 -->
@@ -72,33 +72,185 @@
 			<h1 class="floor-title">F1 家用电器</h1>
 			<ul class="floor-list">
 				<li class="floor-item">
-					<a href="./list.html?categoryId=100006">
+					<a href="./product-list.html?categoryId=100006">
 						<span class="floor-text">双开门冰箱</span>
 						<img src="<%= require("../image/floor/floor1-1.jpg") %>" alt="双开门冰箱" class="floor-img">
 					</a>
 				</li>
 				<li class="floor-item">
-					<a href="./list.html?categoryId=100007">
+					<a href="./product-list.html?categoryId=100007">
 						<span class="floor-text">电视</span>
 						<img src="<%= require("../image/floor/floor1-2.jpg") %>" alt="电视" class="floor-img">
 					</a>
 				</li>
 				<li class="floor-item">
-					<a href="./list.html?categoryId=100008">
+					<a href="./product-list.html?categoryId=100008">
 						<span class="floor-text">洗衣机</span>
 						<img src="<%= require("../image/floor/floor1-3.jpg") %>" alt="洗衣机" class="floor-img">
 					</a>
 				</li>
 				<li class="floor-item">
-					<a href="./list.html?categoryId=100009">
+					<a href="./product-list.html?categoryId=100009">
 						<span class="floor-text">空调</span>
 						<img src="<%= require("../image/floor/floor1-4.jpg") %>" alt="空调" class="floor-img">
 					</a>
 				</li>
 				<li class="floor-item">
-					<a href="./list.html?categoryId=100010">
+					<a href="./product-list.html?categoryId=100010">
 						<span class="floor-text">热水器</span>
 						<img src="<%= require("../image/floor/floor1-5.jpg") %>" alt="热水器" class="floor-img">
+					</a>
+				</li>
+
+			</ul>
+		</div>
+	</div>
+	<div class="w">
+		<div class="floor-wrap">
+			<h1 class="floor-title">F2 数码3C</h1>
+			<ul class="floor-list">
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100011">
+						<span class="floor-text">笔记本电脑</span>
+						<img src="<%= require("../image/floor/floor2-1.jpg") %>" alt="笔记本电脑" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100012">
+						<span class="floor-text">手机</span>
+						<img src="<%= require("../image/floor/floor2-2.jpg") %>" alt="手机" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100013">
+						<span class="floor-text">平板电脑</span>
+						<img src="<%= require("../image/floor/floor2-3.jpg") %>" alt="平板电脑" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100014">
+						<span class="floor-text">数码相机</span>
+						<img src="<%= require("../image/floor/floor2-4.jpg") %>" alt="数码相机" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100015">
+						<span class="floor-text">3C配件</span>
+						<img src="<%= require("../image/floor/floor2-5.jpg") %>" alt="3C配件" class="floor-img">
+					</a>
+				</li>
+
+			</ul>
+		</div>
+	</div>
+	<div class="w">
+		<div class="floor-wrap">
+			<h1 class="floor-title">F3 服装箱包</h1>
+			<ul class="floor-list">
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100016">
+						<span class="floor-text">女装</span>
+						<img src="<%= require("../image/floor/floor3-1.jpg") %>" alt="女装" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100017">
+						<span class="floor-text">帽子专区</span>
+						<img src="<%= require("../image/floor/floor3-2.jpg") %>" alt="帽子专区" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100018">
+						<span class="floor-text">旅行箱</span>
+						<img src="<%= require("../image/floor/floor3-3.jpg") %>" alt="旅行箱" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100019">
+						<span class="floor-text">手提包</span>
+						<img src="<%= require("../image/floor/floor3-4.jpg") %>" alt="手提包" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100020">
+						<span class="floor-text">保暖内衣</span>
+						<img src="<%= require("../image/floor/floor3-5.jpg") %>" alt="保暖内衣" class="floor-img">
+					</a>
+				</li>
+
+			</ul>
+		</div>
+	</div>
+	<div class="w">
+		<div class="floor-wrap">
+			<h1 class="floor-title">F4 食品生鲜</h1>
+			<ul class="floor-list">
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100021">
+						<span class="floor-text">最爱零食</span>
+						<img src="<%= require("../image/floor/floor4-1.jpg") %>" alt="最爱零食" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100022">
+						<span class="floor-text">生鲜</span>
+						<img src="<%= require("../image/floor/floor4-2.jpg") %>" alt="生鲜" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100023">
+						<span class="floor-text">半成品菜</span>
+						<img src="<%= require("../image/floor/floor4-3.jpg") %>" alt="半成品菜" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100024">
+						<span class="floor-text">速冻专区</span>
+						<img src="<%= require("../image/floor/floor4-4.jpg") %>" alt="速冻专区" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100025">
+						<span class="floor-text">进口牛奶</span>
+						<img src="<%= require("../image/floor/floor4-5.jpg") %>" alt="进口牛奶" class="floor-img">
+					</a>
+				</li>
+
+			</ul>
+		</div>
+	</div>
+	<div class="w">
+		<div class="floor-wrap">
+			<h1 class="floor-title">F5 酒水饮料</h1>
+			<ul class="floor-list">
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100026">
+						<span class="floor-text">白酒</span>
+						<img src="<%= require("../image/floor/floor5-1.jpg") %>" alt="白酒" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100027">
+						<span class="floor-text">红酒</span>
+						<img src="<%= require("../image/floor/floor5-2.jpg") %>" alt="红酒" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100028">
+						<span class="floor-text">饮料</span>
+						<img src="<%= require("../image/floor/floor5-3.jpg") %>" alt="饮料" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100029">
+						<span class="floor-text">调制鸡尾酒</span>
+						<img src="<%= require("../image/floor/floor5-4.jpg") %>" alt="调制鸡尾酒" class="floor-img">
+					</a>
+				</li>
+				<li class="floor-item">
+					<a href="./product-list.html?categoryId=100030">
+						<span class="floor-text">进口洋酒</span>
+						<img src="<%= require("../image/floor/floor5-5.jpg") %>" alt="进口洋酒" class="floor-img">
 					</a>
 				</li>
 
