--- a/src/page/product-list/index.css
+++ b/src/page/product-list/index.css
@@ -1,6 +1,102 @@
+
 /*
 * @Author: shijie
 * @Date:   2019-01-22 14:34:28
 * @Last Modified by:   shijie
-* @Last Modified time: 2019-01-22 14:34:28
+* @Last Modified time: 2019-02-20 00:43:44
 */
+
+./* 排序按钮样式 */
+.sort-con{
+ overflow: auto;
+}
+.link {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+}
+img {
+    display: block;
+    border: none;
+}
+.sort-con .sort-item{
+	float: left;
+    display: inline-block;
+    position: relative;
+    padding: 0 8px;
+    height: 23px;
+    line-height: 23px;
+    border: 1px solid #ccc;
+    margin-right: -1px;
+    background: #fff;
+    color: #333;
+    cursor: pointer;
+}
+.sort-con .sort-item.active{
+	background: #c60023;
+	border: 1px solid #c60023;
+	color: #fff;
+}
+.sort-con .sort-item .fa-sort-desc{
+	position: absolute;
+	top: 8px;
+	right: 8px;
+}
+.sort-con .sort-item.asc .fa-sort-desc{
+	opacity: .6;
+}
+.sort-con .sort-item.desc .fa-sort-asc{
+	opacity: .6;
+}
+/*列表容器*/
+.p-list-con{
+	margin-top: 15px;
+	margin-right: -20px;
+	overflow: hidden;
+}
+.p-list-con .p-item{
+	position: relative;
+    width: 180px;
+    padding: 10px;
+    margin: 0 20px 20px 0;
+    float: left;
+    cursor: pointer;
+    background: #fff;
+    transition: box-shadow .5s ease;
+}
+.p-list-con .p-item .p-img-con{
+	width: 180px;
+    height: 200px;
+}
+.p-list-con .p-item .p-img-con .p-img{
+	width: 100%;
+	height:100%;
+}
+.p-list-con .p-item .p-price-con{
+	height: 30px;
+	line-height: 30px;
+
+}
+.p-list-con .p-item .p-price-con .p-price{
+	font-size: 16px;
+	color: #e7380d;
+}
+.p-list-con .p-item .p-name-con{
+	height: 40px;
+	overflow: hidden;
+}
+.p-list-con .p-item .p-name-con .p-name{
+	line-height: 20px;
+	margin-bottom: 10px;
+	color: #666;
+	text-decoration: none;
+}
+.err-tip{
+    height: 60px;
+    line-height: 60px;
+    color: #f60;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    background: #eee;
+}
